# HaskellProjects

SudokuSolver/: CHANGELOG.md  Sud.cabal
SudokuSolver/app/: Main.hs
SudokuSolver/lib/Sud/: Game.hs  Rdg.hs
