cabal-version:      3.4
name:               SudokuSolver
version:            0.1.0.0
build-type:         Simple

-- synopsis: Simple sudoku solver using backtracking.

common common-extensions
    default-extensions: 
            OverloadedStrings

library
    import: common-extensions
    build-depends:
            base
          , text
    hs-source-dirs: lib
    exposed-modules: 
            Sud.Rdg
          , Sud.Game
    default-language: Haskell2010

executable suSol
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:    
            base
          , optparse-applicative
          , filepath
          , text
          , SudokuSolver
    default-language: Haskell2010
